--- a/css/specimen.css
+++ b/css/specimen.css
@@ -1866,6 +1866,9 @@ button.swiper-pagination-bullet {
 }
 
 .wp-block-columns.is-not-stacked-on-mobile {
+    margin: 0;
+    align-items: flex-start;
+    flex-direction: row-reverse;
     -ms-flex-wrap: nowrap;
     flex-wrap: nowrap
 }
@@ -1885,7 +1888,10 @@ button.swiper-pagination-bullet {
 }
 
 .wp-block-columns.is-not-stacked-on-mobile>.wp-block-column:not(:first-child) {
-    margin-left: var(--wp--style--block-gap,2em)
+    height: 135px;
+    text-align: center;
+    margin-left: 0;
+    /* margin-left: var(--wp--style--block-gap,2em) */
 }
 
 .wp-block-column {
@@ -31187,6 +31193,7 @@ pre.wp-block-verse {
 
 @media screen and (max-width: 750px) {
     .p-profile__listItem {
+        text-align: left;
         display: block;
         padding:5.33333vw 0
     }
@@ -31219,7 +31226,12 @@ pre.wp-block-verse {
 
 @media screen and (max-width: 750px) {
     .p-profile__listTtl {
-        width:80px;
+        /* width:80px; */
+        font-family: "Noto Serif JP", serif;
+        font-optical-sizing: auto;
+        font-weight: 800;
+        font-style: normal;
+        text-align: left;
         font-size: 14px;
         font-size: 3.73333vw
     }
@@ -31233,6 +31245,11 @@ pre.wp-block-verse {
 
 @media screen and (max-width: 750px) {
     .p-profile__listTxt {
+        font-family: "Noto Serif JP", serif;
+        font-optical-sizing: auto;
+        font-weight: <weight>;
+        font-style: normal;
+        margin: 0;
         text-align: left;
         width:64vw;
         font-size: 14px;
@@ -31249,7 +31266,7 @@ pre.wp-block-verse {
     align-items: center;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
-    justify-content: space-between
+    justify-content: left;
 }
 
 .p-profile__listChildItem:nth-of-type(n+2) {
@@ -31263,13 +31280,14 @@ pre.wp-block-verse {
 }
 
 .p-profile__listChildPosition {
-    width: 170px;
+    width: 100px;
     font-size: 16px
 }
 
 @media screen and (max-width: 750px) {
     .p-profile__listChildPosition {
-        width:40vw;
+        margin: 0;
+        width:30vw;
         font-size: 14px;
         font-size: 3.73333vw
     }
@@ -31294,6 +31312,7 @@ pre.wp-block-verse {
 
 @media screen and (max-width: 750px) {
     .p-profile__listChildName {
+        margin: 0;
         width:21.33333vw;
         font-size: 14px;
         font-size: 3.73333vw
@@ -31695,4 +31714,9 @@ pre.wp-block-verse {
     .contents-area .h2-title-area h2{
         border-left: 8px solid #000;
     }
+
+    .group-company-name{
+        font-weight: 600;
+    }
 }
+
