--- a/css/form.css
+++ b/css/form.css
@@ -137,5 +137,29 @@ textarea {
 }
 
 .contact-wrap{
+  padding-left: 0;
   margin-top: 80px;
+}
+
+.contact-text{
+  color: #000;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.toggle-btn-contact{
+  counter-reset: #000;
+}
+
+@media(max-width: 480px){
+  .accordion-contact-main{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+     padding: 0 30px;
+  }
+
+  .toggle-btn-contact{
+    font-size: 23px;
+  }
 }
