--- a/css/transit5.css
+++ b/css/transit5.css
@@ -1,4 +1,4 @@
-.--futura {
+/* .--futura {
     font-family: futura-pt,sans-serif;
     font-style: normal;
     font-weight: 600
@@ -81,9 +81,8 @@ body button {
 
 @media(width <= 640px) {
     .c-container,.p-archive {
-        
-        padding-left: 0px;
-        padding-right: 0px
+        padding-left: 20px;
+        padding-right: 20px
     }
 }
 
@@ -199,7 +198,7 @@ body button {
 }
 
 .thd_mod-arw__link:before {
-    background-image: url(https://www.transit-web.com/_wp/wp-content/plugins/my-snow-monkey/img/icon_arw_r_circle_bk.svg);
+    background-image: url(../img/icon_arw_r_circle_bk.svg);
     background-position: 0 0;
     background-repeat: no-repeat;
     background-size: contain;
@@ -214,10 +213,6 @@ body button {
 }
 
 .thd_mod-arw__link a {
-    font-family: "Noto Serif JP", serif;
-        font-optical-sizing: auto;
-        font-style: normal;
-    font-size: 15px;
     text-decoration: none
 }
 
@@ -294,7 +289,7 @@ body button {
 
 @media(width <= 640px) {
     .thd_mod-bottom_next_link .smb-btn {
-        font-size: 18px;
+        font-size: 1.8rem;
         height: 123px
     }
 }
@@ -303,13 +298,13 @@ body button {
     border-right: 1px solid #fff;
     border-top: 1px solid #fff;
     content: "";
-    height: 20px;
+    height: 25px;
     mix-blend-mode: difference;
     position: absolute;
-    /* right: 60px; */
+    right: 60px;
     top: 50%;
     transform: translateY(-50%) rotate(45deg);
-    width: 20px
+    width: 25px
 }
 
 @media(width <= 640px) {
@@ -431,7 +426,6 @@ body button {
 }
 
 .wp-block-navigation {
-    margin-bottom: 30px;
     margin-top: 0!important
 }
 
@@ -559,10 +553,8 @@ body button {
 
 @media(width <= 640px) {
     .smb-section__header .smb-section__title {
-        font-size: 30px;
-        margin-bottom: 10px;
+        font-size: 2.6rem;
         line-height: 1
-
     }
 }
 
@@ -578,7 +570,6 @@ body button {
 
 @media(width <= 640px) {
     .smb-section__header .smb-section__lede {
-        letter-spacing: 3px;
         font-size: 1.3rem;
         margin-top: 3px
     }
@@ -1951,45 +1942,6 @@ body button {
     width: 100%
 }
 
-.thd_top__kv__main__img:after {
-    white-space: pre;
-    content: "texttext\Atexttext\Atexttext";
-    color: #fff;
-    font-size: 6rem;
-    font-weight: bold;
-    text-align: left;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-/* .thd_top__kv__main__img2:after {
-    content: "全てのクライアントにとって､";
-    color: #000;
-    font-size: 5rem;
-    font-weight: bold;
-    text-align: left;
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-45%, -55%);
-} 
-
-.thd_top__kv__main__img3:after {
-    content: "価値あるサービスへ";
-    color: #000;
-    font-size: 4rem;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-weight: bold;
-    text-align: left;
-    border: #000 double 1px;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-45%, -60%);
-}  */
-
 .thd_top__kv__main__img img {
     aspect-ratio: 1266/500;
     height: 100%;
@@ -2231,8 +2183,6 @@ body button {
 }
 
 .thd_top__news .is-layout-constrained {
-    width: 90%;
-    margin: auto;
     position: static
 }
 
@@ -2373,8 +2323,7 @@ body button {
 
 @media(width <= 640px) {
     .thd_top__vision .wp-block-columns .wp-block-column .wp-block-heading {
-        
-        font-size: 23px;
+        font-size: 2rem;
         margin-top: 25px;
         text-align: center
     }
@@ -3908,8 +3857,7 @@ body button {
 
 @media(width <= 980px) {
     .thd_our_business__catch br {
-        /* display: none */
-        display: block;
+        display: none
     }
 }
 
@@ -5731,7 +5679,6 @@ body button {
 }
 
 .js-inview.is-inview .smb-section__header .smb-section__title {
-    font-size: 37px;
     transform: scaleX(1);
     transition: transform .4s cubic-bezier(.165,.84,.44,1)
 }
@@ -5874,23 +5821,12 @@ body button {
 }
 
 .thd_company__menbers__item.is-inview .thd_company__menbers__item__name,.thd_company__menbers__item.is-inview .thd_company__menbers__item__name__en {
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: left;
-    font-size: 15px;
-    color: #000;
-    margin-top: 0;
     opacity: 1;
     transform: translateX(0);
     transition: transform .8s ease-out,opacity .8s linear
 }
 
-
-
 .thd_company__menbers__item.is-inview .thd_company__menbers__item__btn,.thd_company__menbers__item.is-inview .thd_company__menbers__item__text {
-    margin-top: 5px;
-    color: #000;
-    font-size: 14px;
     opacity: 1;
     transform: translateX(0);
     transition: transform .8s ease-out .2s,opacity .8s linear .2s
@@ -6106,34 +6042,4 @@ body button {
 
 .error404 .l-contents__sidebar {
     display: none
-}
-
-@media(max-width: 480px){
-    .exective-name-jp{
-        font-size: 16px;
-        letter-spacing: 3px;
-    }
-
-    .thd_company__menbers__item{
-        margin-top: 0;
-    }
-
-    .executive-names{
-        font-size: 12px;
-    }
-
-    .thd_company__menbers__item__name-2{
-        text-align: left;
-        font-size: 15px;
-    }
-
-    .executive-company{
-        margin-bottom: 5px;
-        font-size: 14px;
-        text-align: left;
-    }
-
-    .executive-wrap{
-        padding: 10px;
-    }
-}
+} */
