--- a/css/transit2.css
+++ b/css/transit2.css
@@ -37,6 +37,11 @@
     position: relative
 }
 
+.smb-section--fit-attention{
+    width: 85%;
+    margin: auto;
+}
+
 .smb-section__background-text,.smb-section__fixed-background {
     bottom: 0;
     left: 0;
@@ -193,7 +198,7 @@
 }
 
 .smb-section__contents-wrapper {
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
     margin-left: auto;
     margin-right: auto;
     max-width: min(100%,var(--smb-section--contents-wrapper-width));
