--- a/css/style.css
+++ b/css/style.css
@@ -1277,6 +1277,10 @@ li {
     .smb-section__header-2{
         margin-bottom: 25px;
     }
+
+    .group-companys{
+        margin-top: 40px;
+    }
 }
 
 
