--- a/css/transit2.css
+++ b/css/transit2.css
@@ -207,7 +207,8 @@
 }
 
 .smb-section__contents-wrapper-exective{
-    background-color: #fafafa;
+    background-color: #fff;
+    margin-top: 40px;
 }
 
 .smb-section__contents-wrapper-group{
