--- a/css/style.css
+++ b/css/style.css
@@ -1029,14 +1029,19 @@ li {
     background: #fff;
     height: 900px;
     overflow-y: auto;
-    padding-top: 50px;
+    padding-top: 25px;
     }
 
     .index{
         display: block;
-        padding-top: 10px;
+        /* padding-top: 10px; */
         width: 80%;
         padding-right: 0;
+        text-align: left;
+    }
+
+    .header-inner-img{
+        margin-bottom: 40px;
     }
 
 
@@ -1359,6 +1364,29 @@ li {
 
     .l-main-company , .company-body{
         background-color: #fff;
+    }
+
+    .vision-body{
+        background-color: #fff;
+    }
+
+    .vision-main{
+        background-color: #fff;
+    }
+
+    .privacy-policy{
+        text-align: left;
+        /* width: 85%; */
+        /* padding: auto; */
+        background-color: #1a1a1a;
+        padding-left: 10%;
+        padding-top: 20px;
+    }
+    .privacy-policy-text{
+        /* width: 85%; */
+        /* margin: auto; */
+        color: #a5a5a5;
+        font-size: 10px;
     }
 }
 
