--- a/css/style.css
+++ b/css/style.css
@@ -1388,6 +1388,16 @@ li {
         color: #a5a5a5;
         font-size: 10px;
     }
+
+    .close-btn-text::after{
+        content: "close";
+        font-size: 15px;
+        color: #000;    
+        font-family: sans-serif;
+        right: 8%;
+        display: block;
+        margin-top: -20px;
+    }
 }
 
 
