--- a/css/style.css
+++ b/css/style.css
@@ -861,12 +861,20 @@ header {
     display: none;
     z-index: 999;
     font-size: 40px;
+    animation: fadeIn 1s ease-in-out;
+    /* animation-delay: 0.5s;  */
+
+
 }
+
+
+  
+
 
 .header-under {
     transform: translateX(100%);
-    /* transition: transform .5s ease-in-out; */
-    transition: opacity .24s linear;
+    transition: transform .5s ease-in-out;
+    /* transition: opacity .24s linear; */
 }
 
 /* ここから追加要素 */
