--- a/css/transit3.css
+++ b/css/transit3.css
@@ -1,4 +1,4 @@
-/* .smb-btn {
+/* /* .smb-btn {
     --smb-btn--background-color: var(--wp--preset--color--sm-accent);
     --smb-btn--style--ghost--color: var(--wp--preset--color--sm-accent);
     --smb-btn--style--text--color: var(--wp--preset--color--sm-accent)
@@ -9791,4 +9791,4 @@ a.p-infobar:focus-visible {
         margin-bottom: 30px;
     }
 
-}
+} */
